# mediabatch

./: README.md  main.py  pyproject.toml
src/: baseupscaler.py  imageupscale.py  main.py  menu.py  upscaler.py  utils.py  videoupscale.py
src/mediabatch/cli/: cli.py
src/mediabatch/core/: imageupscale.py  videoupscale.py
src/mediabatch/menu/: menu.py
src/mediabatch/utils/: utils.py
